--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website - Easy Tutorials</title>
+    <title>AstroJays Rocketry Team</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
