--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AstroJays Rocketry Team</title>
+    <title>AstroJays</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- The font is generated from Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -26,6 +32,12 @@
 
         </nav>
 
+        <div class="text-box">
+            <h1>AstroJays Rocketry </h1>
+            <p> AstroJays Rocketry is an interdisciplinary high-powered rocketry team of students from the Johns Hopkins
+                University, <br> advised by the JHU Mechanical Engineering Department. </p>
+            <a href="" class="hero-btn">Contact Us to Know More</a>
+        </div>
 
 </body>
 
