Added Screen Fitting
for phones

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
         <div class="text-box">
             <h1>AstroJays Rocketry </h1>
-            <p> AstroJays Rocketry is an interdisciplinary high-powered rocketry team of students from the Johns Hopkins
-                University, <br> advised by the JHU Mechanical Engineering Department. </p>
+            <p> AstroJays Rocketry is an interdisciplinary high-powered rocketry team of students from the Johns
+                    Hopkins University, <br> advised by the JHU Mechanical Engineering Department. </p>
             <a href="" class="hero-btn">Contact Us to Know More</a>
         </div>
 
